# kicad-dev

./: .ycm_extra_conf.py  CMakeLists.txt
CMakeModules/: FindSoci.cmake
bitmap2component/: bitmap2cmp_gui.cpp  bitmap2cmp_gui.h  bitmap2cmp_gui_base.cpp  bitmap2cmp_gui_base.fbp  bitmap2cmp_gui_base.h  bitmap2component.h
common/: CMakeLists.txt
common/tool/: action_manager.cpp  context_menu.cpp  tool_action.cpp  tool_dispatcher.cpp  tool_manager.cpp
include/tool/: action_manager.h  tool_action.h  tool_manager.h
pcbnew/: CMakeLists.txt  database_plugin.cpp  database_plugin.h  footprint_edit_frame.cpp  io_mgr.cpp  io_mgr.h
pcbnew/tools/: key_sequence_tool.cpp  key_sequence_tool.h  pcb_actions.h  pcb_editor_control.cpp  tools_common.cpp
utils/: CMakeLists.txt
